[SCB-2687]upgrade to open api 3: pojo parameters processing